--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -35,7 +35,11 @@
     "- You have to learn it, and ORM libraries are not lightweight tools;\n",
     "- You have to set it up. Same problem.\n",
     "- Performance is OK for usual queries, but a SQL master will always do better with his own SQL for big projects.\n",
-    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a __`for`__ loop."
+    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a __`for`__ loop.\n",
+    "\n",
+    "### SQLAlchemy and Peewee\n",
+    "\n",
+    "We'll take a quick look at two Python ORM's and explore some of their features. It's up to you to study them in depth but you'll have to use one in your exercises or projects. We won't cover all of their features and functionalities but the goal is to give you an idea of how they are used."
    ]
   },
   {
@@ -54,8 +58,8 @@
     "\n",
     "### We'll cover how to:\n",
     "\n",
-    "- Connect a Database\n",
     "- Declare a Mapping\n",
+    "- Configure a Database Engine\n",
     "- Create a Schema\n",
     "- Create a Session\n",
     "- Create, Add and Update Objects\n",
@@ -80,69 +84,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connecting a Database\n",
-    "\n",
-    "For this tutorial we will use an in-memory-only SQLite database. To connect we use <b>`create_engine()`</b>:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine('sqlite:///:memory:', echo=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__`create_engine()`__\n",
-    "\n",
-    "- The return value of __`create_engine()`__ is an instance of __`Engine`__ and it represents the core interface to the database. It has not actually tried to connect to the database yet; that happens only the first time it is asked to perform a task against the database.\n",
-    "\n",
-    "__`echo`__\n",
-    "\n",
-    "- This is shortcut to setting up SQLAlchemy logging, which is accomplished via Python’s standard __`logging`__ module. \n",
-    "- If this is set to __`True`__, we’ll see all the generated SQL produced. _(You can set it to __`False`__. )_\n",
-    "- Our screenshots show the output of each statement with `echo` set to `True`.\n",
-    "\n",
     "### Declaring a Mapping\n",
     "\n",
     "When using the ORM, we need to describe the database tables we'll be dealing with by defining classes, which will be mapped to those tables. This usually goes into the __`models.py`__ file of your application.\n",
     "\n",
-    "- We'll be using a system known as __`Declarative`__, which allows us to create classes that include directives to describe the actual database table they will be mapped to.\n",
+    "We'll be using a system in SQLAlchemy known as __`Declarative`__, which allows us to create classes that include directives to describe the actual database table they will be mapped to. Outside of what the mapping process does to our class, the class remains otherwise mostly a normal Python class, to which we can define any number of ordinary attributes and methods needed by our application.\n",
     "\n",
-    "- A class using __`Declarative`__ at a minimum needs a __`__tablename__`__ attribute, and at least one Column which is part of a primary key.\n",
-    "\n",
-    "- Outside of what the mapping process does to our class, the class remains otherwise mostly a normal Python class, to which we can define any number of ordinary attributes and methods needed by our application."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sqlalchemy.ext.declarative import declarative_base\n",
-    "\n",
-    "Base = declarative_base()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now that we have a “base”, we can define any number of mapped classes in terms of it. We will start with just a single table called __`users`__, which will store records for the end-users using our application.\n",
-    "\n",
-    "A new class called __`User`__ will be the class to which we map this table. Within the class, we define details about the table to which we’ll be mapping, primarily the table name, and names and datatypes of columns:"
+    "- A class using __`Declarative`__ at a minimum needs a __`__tablename__`__ attribute, and at least one Column which is part of a primary key."
    ]
   },
   {
@@ -154,6 +102,9 @@
    "outputs": [],
    "source": [
     "from sqlalchemy import Column, Integer, String\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "Base = declarative_base()\n",
     "\n",
     "\n",
     "class User(Base):\n",
@@ -173,17 +124,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Schema\n",
+    "### Configuring a Database Engine\n",
     "\n",
-    "When we declared our class, __`Declarative`__ used a Python metaclass in order to perform additional activities once the class declaration was complete; within this phase, it then created a __`Table`__ object according to our specifications, and associated it with the class by constructing a __`Mapper`__ object.\n",
+    "For this tutorial we will use an in-memory-only SQLite database. This setting should live somewhere in your application. We use the __`create_engine()`__ method to create an __`Engine`__ instance, representing the core interface to the database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('sqlite:///:memory:', echo=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- It has not actually tried to connect to the database yet; that happens only the first time it is asked to perform a task against the database.\n",
+    "\n",
+    "__`echo`__\n",
+    "\n",
+    "- This is shortcut to setting up SQLAlchemy logging, which is accomplished via Python’s standard __`logging`__ module. \n",
+    "- If this is set to __`True`__, we’ll see all the generated SQL produced. _(You can set it to __`False`__. )_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating the Schema\n",
     "\n",
     "![Intermediate_3](./images/img_meta_data.png)\n",
     "\n",
-    "The Table object is a member of a larger collection known as __`MetaData`__. When using __`Declarative`__, this object is available using the __`.metadata`__ attribute of our declarative base class.\n",
-    "\n",
-    "The __`MetaData`__ is a registry which includes the ability to emit a limited set of schema generation commands to the database. As our SQLite database does not actually have a users table present, we can use MetaData to issue __`CREATE TABLE`__ statements to the database for all tables that don’t yet exist. \n",
-    "\n",
-    "We call the __`MetaData.create_all()`__ method, passing in our Engine as a source of database connectivity. We will see that special commands are first emitted to check for the presence of the users table, and following that the actual __`CREATE TABLE`__ statement. Your application doesn't need to run this all the time. This is only executed to create the required tables so this should be in a conditional statement or a separate script."
+    "We call the __`MetaData.create_all()`__ method, passing in our `Engine` as a source of database connectivity. Special commands are first emitted to check for the presence of the users table then the actual __`CREATE TABLE`__ statement. Your application doesn't need to run this all the time. This is only executed to create the required tables so this should be in a separate script."
    ]
   },
   {
@@ -203,7 +182,7 @@
    "source": [
     "### Creating a Session\n",
     "\n",
-    "We’re now ready to start talking to the database. The ORM’s “handle” to the database is the __`Session`__.\n",
+    "We’re now ready to start talking to the database. In SQLAlchemy, the ORM’s “handle” to the database is the __`Session`__.\n",
     "\n",
     "When we first set up the application, at the same level as our __`create_engine()`__ statement, we define a __`Session`__ class which will serve as a factory for new __`Session`__ objects. This custom-made __`Session`__ class will create new __`Session`__ objects which are bound to our database:"
    ]
@@ -387,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Session is paying attention. It knows, for example, that Ed Jones has been modified:"
+    "The Session is paying attention. It knows, for example, that Ed Jones has been modified and that three new User objects are pending::"
    ]
   },
   {
@@ -399,13 +378,6 @@
    "outputs": [],
    "source": [
     "session.dirty"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And that three new User objects are pending:"
    ]
   },
   {
@@ -767,7 +739,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18.2 Peewee"
+    "## 18.2 Peewee\n",
+    "\n",
+    "> _Peewee is a simple and small ORM. It has few (but expressive) concepts, making it easy to learn and intuitive to use._\n",
+    "\n",
+    "Let's install Peewee."
    ]
   },
   {
@@ -777,7 +753,166 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install peewee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Definition\n",
+    "\n",
+    "When starting a project with Peewee, it’s typically best to begin with your data model, by defining one or more `Model` classes. We'll use an in-memory SQLite database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import peewee\n",
+    "\n",
+    "db = peewee.SqliteDatabase(':memory:')\n",
+    "\n",
+    "\n",
+    "class BaseModel(peewee.Model):\n",
+    "\n",
+    "    class Meta:\n",
+    "        database = db\n",
+    "\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    name = peewee.CharField()\n",
+    "    birthday = peewee.DateField()\n",
+    "    is_relative = peewee.BooleanField()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have our model, let’s connect to the database. Although it’s not necessary to open the connection explicitly, it is good practice since it will reveal any errors with your database connection immediately, as opposed to some arbitrary time later when the first query is executed. It is also good to close the connection when you are done – for instance, a web app might open a connection when it receives a request, and close the connection when it sends the response.\n",
+    "\n",
+    "### Creating the Database\n",
+    "\n",
+    "We’ll begin by creating the tables in the database that will store our data. This will create the tables with the appropriate columns, indexes, sequences, and foreign key constraints:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "models = [\n",
+    "    Person,\n",
+    "]\n",
+    "db.connect()\n",
+    "db.create_tables(models)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Storing data\n",
+    "\n",
+    "Let’s begin by populating the database with some people. We will use the __`save()`__ and __`create()`__ methods to add and update people’s records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "# You can add a person by calling the save() method on an instance:\n",
+    "uncle_bob = Person(name='Bob', birthday=date(1960, 1, 15), is_relative=True)\n",
+    "uncle_bob.save()\n",
+    "\n",
+    "# You can also add a person by calling the create() method, which returns an instance:\n",
+    "grandma = Person.create(name='Grandma', birthday=date(1935, 3, 1), is_relative=True)\n",
+    "herb = Person.create(name='Herb', birthday=date(1950, 5, 5), is_relative=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Updating Data\n",
+    "\n",
+    "Updating is as simple as editing and the calling __`save()`__ on the instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grandma.name = 'Grandma L.'\n",
+    "grandma.save()  # Update grandma's name in the database."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing Data\n",
+    "\n",
+    "Removing data is as simple as calling the `delete_instance()` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "herb.delete_instance()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieving Data\n",
+    "\n",
+    "The real strength of our database is in how it allows us to retrieve data through queries. Relational databases are excellent for making ad-hoc queries.\n",
+    "\n",
+    "#### Getting single records\n",
+    "\n",
+    "Let’s retrieve Grandma’s record from the database. To get a single record from the database, use `SelectQuery.get()` or the equivalent shorthand `Model.get()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grandma = Person.select().where(Person.name=='Grandma L.').get()\n",
+    "\n",
+    "# is equivalent to\n",
+    "\n",
+    "grandma = Person.get(Person.name=='Grandma L.')"
+   ]
   }
  ],
  "metadata": {
