--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -35,13 +35,29 @@
     "- You have to learn it, and ORM libraries are not lightweight tools;\n",
     "- You have to set it up. Same problem.\n",
     "- Performance is OK for usual queries, but a SQL master will always do better with his own SQL for big projects.\n",
-    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a __`for`__ loop.\n",
-    "\n",
+    "- It abstracts the DB. While it's OK if you know what's happening behind the scene, it's a trap for new programmers that can write very greedy statements, like a heavy hit in a __`for`__ loop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "### SQLAlchemy and Peewee\n",
     "\n",
     "We'll take a quick look at two Python ORM's and explore some of their features. It's up to you to study them in depth but you'll have to use one in your exercises or projects. We won't cover all of their features and functionalities but the goal is to give you an idea of how they are used.\n",
     "\n",
     "ORM's are huge concepts to tackle. These ORM's usually consist of big libraries or are frameworks themselves and are usable in so many ways. They abstract away the database layer, enabling you to swap out databases at will and yet still have uniform way of querying the database. Querying the database using an ORM can be done in many ways as the examples will show. This is in no way a comprehensive or exhaustive source. Please refer to their documentation for more information."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "\n",
+    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages and uses WTForms. Now, add a database and use your ORM of choice. You can now build apps in Python."
    ]
   },
   {
