added separate notebooks

--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "#### Exercise\n",
     "\n",
-    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages and uses WTForms. Now, add a database and use your ORM of choice. You can now build apps in Python."
+    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages and uses WTForms. Now, add a database and use your ORM of choice. In your admin, add the capability to post You can now build apps in Python."
    ]
   },
   {
