--- a/Intermediate_3/18. ORMs.ipynb
+++ b/Intermediate_3/18. ORMs.ipynb
@@ -57,17 +57,23 @@
    "source": [
     "#### Exercise\n",
     "\n",
-    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages and uses WTForms. Now, add a database and use your ORM of choice. In your admin, add the capability to post You can now build apps in Python."
+    "In the previous notebooks, you created a webpage that showcases an upcoming product. It can render pages, accept input and uses WTForms to validate and handle forms.\n",
+    "\n",
+    "- Use your ORM of choice between SQLAlchemy and Peewee\n",
+    "- Add a database\n",
+    "\n",
+    "- In the admin, add the capability to post products\n",
+    "- Adjust your page to show a list of products\n",
+    "\n",
+    "Next level would be the capability to add other users to your app. With you as \"Superuser\", you have the capability to manage other users.\n",
+    "\n",
+    "- Add and deactivate/activate other users\n",
+    "- Users have ther own page\n",
+    "- Users can post their own products\n",
+    "- Users can only see their own page products\n",
+    "\n",
+    "Congratulations! You can now build apps in Python."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
