note on python 2 generator next method

--- a/Intermediate_3/21. Generators.ipynb
+++ b/Intermediate_3/21. Generators.ipynb
@@ -81,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To \"consume\" a generator, just call the `next()` function on it."
+    "To \"consume\" a generator, just call the `next()` function on it.\n",
+    "\n",
+    "In Python 2, generators had a `.next()` method. This attribute is no longer available in Python 3."
    ]
   },
   {
