refer to python versions with .x

--- a/Intermediate_3/21. Generators.ipynb
+++ b/Intermediate_3/21. Generators.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## 21.1 Generator Expressions\n",
     "\n",
-    "The previous notebook covered list comprehensions. When lists can no longer fit into the memory of your computer, that's the time when you realize why there is a need for generators. Large lists, however, aren't required when deciding whether to use generators. In fact, generators are more memory-efficient than lists. In Python 2, `range()` used a list while `xrange()` used a generator to create a range of numbers. In Python 3, `range()` defauled to using a generator and `xrange()` is has been deprecated.\n",
+    "The previous notebook covered list comprehensions. When lists can no longer fit into the memory of your computer, that's the time when you realize why there is a need for generators. Large lists, however, aren't required when deciding whether to use generators. In fact, generators are more memory-efficient than lists. In Python 2.x, `range()` used a list while `xrange()` used a generator to create a range of numbers. In Python 3.x, `range()` defauled to using a generator and `xrange()` is has been deprecated.\n",
     "\n",
     "Consider the following list comprehension:"
    ]
@@ -83,7 +83,7 @@
    "source": [
     "To \"consume\" a generator, just call the `next()` function on it.\n",
     "\n",
-    "In Python 2, generators had a `.next()` method. This attribute is no longer available in Python 3."
+    "In Python 2.x, generators had a `.next()` method. This attribute is no longer available in Python 3.x."
    ]
   },
   {
