Updates on Operators and Delimiters

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -33,11 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_sum = a + b\n",
-    "print(my_sum)"
+    "print(2 + 3)"
    ]
   },
   {
@@ -57,11 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_difference = a - b\n",
-    "print(my_difference)"
+    "print(2 - 3)"
    ]
   },
   {
@@ -81,11 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
-    "\n",
-    "my_product = a * b\n",
-    "print(my_product)"
+    "print(2 * 3)"
    ]
   },
   {
@@ -94,22 +82,41 @@
    "source": [
     "### ( `/` ) division\n",
     "\n",
-    "Divides left hand operand by right hand operand."
+    "Divides left hand operand by right hand operand.\n",
+    "\n",
+    "The `x / y` expression performs __\"true division\"__ in __3.X__, and __\"classic division\"__ in __2.X__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 10\n",
+    "# Python 2.X\n",
+    "print 3/2 # will print 1\n",
     "\n",
-    "my_quotient = a / b\n",
-    "print(my_quotient)"
+    "\n",
+    "# Python 3.X\n",
+    "print(3/2) # will print 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Python 2.X\n",
+    "print 3/2.0 # will print 1.5\n",
+    "\n",
+    "\n",
+    "# Python 3.X\n",
+    "print(3/2.0) # will print 1.5"
    ]
   },
   {
@@ -118,7 +125,9 @@
    "source": [
     "### ( `//` ) floor division\n",
     "\n",
-    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__."
+    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__.\n",
+    "\n",
+    "In both Python __3.X__ and __2.X__, the `x // y` floor division expression always truncates fractional remainders."
    ]
   },
   {
@@ -129,11 +138,28 @@
    },
    "outputs": [],
    "source": [
-    "a = 10.25\n",
-    "b = 2\n",
+    "# Python 2.X\n",
+    "print 3//2 # will print 1\n",
     "\n",
-    "my_floor_division = (a // b)\n",
-    "print(my_floor_division)"
+    "\n",
+    "# Python 3.X\n",
+    "print(3//2) # will print 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Python 2.X\n",
+    "print 3//2.0 # will print 1.0\n",
+    "\n",
+    "\n",
+    "# Python 3.X\n",
+    "print(3//2.0) # will print 1.0"
    ]
   },
   {
@@ -153,11 +179,7 @@
    },
    "outputs": [],
    "source": [
-    "a = 30\n",
-    "b = 4\n",
-    "\n",
-    "my_modulus = a % b\n",
-    "print(my_modulus)"
+    "print(3 % 2)"
    ]
   },
   {
@@ -177,9 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "a = 2 ** 11\n",
-    "\n",
-    "print(a)"
+    "print(2**3)"
    ]
   },
   {
@@ -703,7 +723,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "     "
+    "### Summary: Table of Comparison and Boolean Operators\n",
+    "\n",
+    "|   Operator   |                    Description                    |\n",
+    "|:------------:|:-------------------------------------------------:|\n",
+    "|    `x < y`   | Strictly less than                                |\n",
+    "|   `x <= y`   | Less than or equal to                             |\n",
+    "|    `x > y`   | Strictly greater than                             |\n",
+    "|   `x >= y`   | Greater than or equal to                          |\n",
+    "|   `x == y`   | Equal to (Same Value)                             |\n",
+    "|   `x != y`   | Not equal to (same as `x <> y` in Python 2.X only |\n",
+    "|   `x is y`   | Same object                                       |\n",
+    "| `x is not y` | Negated object identity                           |\n",
+    "|  `x < y < z` | Chained comparisons                               |\n",
+    "|    `not x`   | If `x` is false then `True`; else, `False`        |\n",
+    "|   `x or y`   | If `x` is false then `y`; else, `x`               |\n",
+    "|   `x and y`  | If `x` is false then`x`; else `y`                 |\n",
+    "\n"
    ]
   },
   {
@@ -881,7 +917,9 @@
    "source": [
     "### `<>`\n",
     "\n",
-    "If values of two operands are not equal, then condition becomes true. This is similar to the __!=__ operator but is then deprecated in Python 3."
+    "If values of two operands are not equal, then condition becomes `True`. \n",
+    "\n",
+    "This is similar to the __!=__ operator but is then deprecated in Python 3 because it is redundant."
    ]
   },
   {
@@ -902,6 +940,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_Note_: \n",
+    "> `!=` and `<>` both mean not equal by value in Python 2.X,  but `!=` is the preferred syntax in in 2.X and the only supported option in 3.X.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4.1.7 Difference between `is` and `==`\n",
     "\n",
     "### `is`\n",
@@ -913,6 +959,8 @@
     " - For _value_ equality. \n",
     " - Use it when you would like to know if two objects have the same value.\n",
     " - Will return true if the objects referred to by the variables are equal.\n",
+    " \n",
+    "In short, `is` performs an identity test; `==` performs value comparison, and so is much more generally useful.\n",
     "\n",
     "For example:"
    ]
@@ -927,14 +975,14 @@
    "source": [
     "# Example no. 1\n",
     "\n",
-    "a = [1, 2, 3]\n",
-    "b = a\n",
+    "x = [1, 2, 3]\n",
+    "y = x\n",
     "\n",
-    "c = b is a \n",
-    "d = b == a\n",
+    "using_is = y is x \n",
+    "using_double_equal = y == x\n",
     "\n",
-    "print(c)\n",
-    "print(d)"
+    "print(using_is)\n",
+    "print(using_double_equal)"
    ]
   },
   {
@@ -947,11 +995,11 @@
    "source": [
     "# Example no. 2\n",
     "\n",
-    "a = 1000 is 10**3\n",
-    "b = 1000 == 10**3\n",
+    "x = 1000 is 10**3\n",
+    "y = 1000 == 10**3\n",
     "\n",
-    "print(a)\n",
-    "print(b)"
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -971,7 +1019,7 @@
     "\n",
     "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression.\n",
     "\n",
-    "When found immediately after certain data types and it contains an integer, it means data is being accessed at that index (__`array[index]`__). When this data is an iterable, it could also represent a slicing operation. Slicing takes in several parameters: start, stop, and an optional end. (__`iterable[start:stop[:end]]`__)."
+    "When found immediately after certain data types and it contains an integer, it means data is being accessed at that index (__`array[index]`__). When this data is an iterable, it could also represent a slicing operation. Slicing takes in several parameters: start, stop, and an optional step. (__`iterable[start:stop[:step]]`__)."
    ]
   },
   {
