2vs3 namespace leak

--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -305,6 +305,45 @@
     "\n",
     "[user.name for user in user_instances if user.is_active()]  # filter active users"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python 2.x vs Python 3.x\n",
+    "\n",
+    "Variables in Python 3.x list comprehensions no longer leak into the global namespace. The code below would return different final values for `i` in Python 2.x and Python 3.x.\n",
+    "\n",
+    "- In Python 3.x, `i` would maintain the original assigned value of `0`.\n",
+    "\n",
+    "- In Python 2.x, `i` would take on the most recent value, in this case, from the loop on `range(5)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Run the code in Python 3.x and Python 2.x\n",
+    "# Compare the final value of i\n",
+    "i = 0\n",
+    "[i for i in range(5)]\n",
+    "i"
+   ]
   }
  ],
  "metadata": {
