2vs3 namespace leak note

--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "## Python 2.x vs Python 3.x\n",
     "\n",
-    "Variables in Python 3.x list comprehensions no longer leak into the global namespace. The code below would return different final values for `i` in Python 2.x and Python 3.x.\n",
+    "Variables in Python 3.x list comprehensions no longer leak into the global namespace. The code below would return different final values for `i` depending on the Python version.\n",
     "\n",
     "- In Python 3.x, `i` would maintain the original assigned value of `0`.\n",
     "\n",
@@ -321,22 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the code in Python 3.x and Python 2.x\n",
     "# Compare the final value of i\n",
