2vs3 namespace leak note

--- a/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_3/20. List, Set and Dictionary Comprehensions.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "- In Python 3.x, `i` would maintain the original assigned value of `0`.\n",
     "\n",
-    "- In Python 2.x, `i` would take on the most recent value, in this case, from the loop on `range(5)`."
+    "- In Python 2.x, `i` would take on the most recent value from the `range(5)` loop."
    ]
   },
   {
