python 2vs3 note on range

--- a/Beginner_3/7. Loops and Iteration.ipynb
+++ b/Beginner_3/7. Loops and Iteration.ipynb
@@ -71,7 +71,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`range()` can accept multiple parameters. The default required parameter is the `stop` argument. It can optionally accept `start` and `step` parameters to have more control over the range of numbers generated. Ex. range(start, stop, [step])"
+    "`range()` can accept multiple parameters. The default required parameter is the `stop` argument. It can optionally accept `start` and `step` parameters to have more control over the range of numbers generated. Ex. range(start, stop, [step]).\n",
+    "\n",
+    "- In Python 3.x, `range()` returns a `range` object that is a generator\n",
+    "\n",
+    "- In Python 2.x, it returned a `list`"
    ]
   },
   {
