--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -6,7 +6,27 @@
    "source": [
     "# 6.3 Strings \n",
     "\n",
-    "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place."
+    "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place.\n",
+    "\n",
+    "### Strings in Python 2 vs. Strings in Python 3\n",
+    "Python 2 and 3 both have two types of strings:\n",
+    "\n",
+    "\n",
+    "> - __byte sequences__, which have to be __literal characters__ from the __ASCII alphabet__. \n",
+    "\n",
+    "> - __Unicode strings__, which can hold onto almost any character you want to put in there. \n",
+    "\n",
+    "In Unicode, you can include other languages, and with the right encoding, emoji. \n",
+    "\n",
+    "\n",
+    "__Python 2__ :\n",
+    ">You had to mark every single Unicode string with a u at the beginning, like __`u'Hello'`__. You have to use Unicode strinfs all the time! (If you forget the __`u`__, you will have a byte sequence instead.\n",
+    "\n",
+    "\n",
+    "__Python 3__ :  \n",
+    ">All strings are now Unicode by default and you have to mark byte sequences with __`b`__. Using Unicode is a much more common scenario so it has reduced development time for everyone that does Python 3.\n",
+    "\n",
+    "If you have or want to support both, you can still mark strings with u in Python 3."
    ]
   },
   {
@@ -441,6 +461,97 @@
     "\n",
     "#New\n",
     "print('{} {}'.format('one', 'two'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4.5 String Slicing\n",
+    "\n",
+    "String slicing extracts elements based on a start and stop.\n",
+    "\n",
+    "We specify an optional first index, an optional last index, and an optional step. \n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[1:6]) # Start at index 1; Stop at index 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[2:-1]) # Start from index 2 through index 1 from the last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[:4]) # Start through index 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[4:]) # Start at index 4 til the end of the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[::2]) # Start through index 2(from end), skipping 2 places each time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_string = \"I Love Python\"\n",
+    "\n",
+    "print(my_string[::-1]) # Revert the entire string"
    ]
   },
   {
