--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -6,11 +6,13 @@
    "source": [
     "# 6.5 Tuples\n",
     "\n",
-    "A tuple is a sequence of immutable Python objects. Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed unlike lists and tuples use parentheses, whereas lists use square brackets.\n",
+    "A tuple is a sequence of __immutable__ Python objects. By __immutable__, it means that tuples __CANNOT__ be changed once created. They hold an __ordered__ collection of values which can be of any type.\n",
     "\n",
-    "Tuple is a Python data type that holds an __ordered__ collection of values, which can be of any type. \n",
+    "- Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed, as mentioned above unlike lists. Also, tuples use parentheses whereas lists use square brackets.\n",
     "\n",
-    "Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
+    "\n",
+    "- Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
+    "\n",
     "\n",
     "See examples below:"
    ]
@@ -77,7 +79,7 @@
    "source": [
     "## 6.5.1 Accessing Values in a Tuple\n",
     "\n",
-    "To access values in tuple, use the square brackets for slicing along with the index or indices to obtain value available at that index (This is similar in accessing lists) \n",
+    "In accessing values in a tuple, it is also similar to other data types such as lists. Use the square brackets for slicing along with the index or indices to obtain value available at that index.\n",
     "\n",
     "Run the examples below:"
    ]
@@ -106,6 +108,48 @@
     "tuple1 = ('P','y','t','h','o','n')\n",
     "\n",
     "tuple1[0:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.5.2 Methods\n",
+    "\n",
+    "Since tuples are immutable (cannot be changed), there are fewer methods available.\n",
+    "\n",
+    "### len()\n",
+    "> The method `__len()__` returns the number of elements in the tuple.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the Code\n",
+    "tuple1 = (1,2,3,4,5)\n",
+    "\n",
+    "len(tuple1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### index()\n",
+    "> \n",
+    "\n",
+    "For example:"
    ]
   }
  ],
